# ClosingBell

./: .env.example  .gitignore  CLINE_COMPLETE_PROJECT_GUIDE.md  CLINE_FIX_TRADING_VALUE.md  CLINE_INITIAL_PROMPT.md  CLINE_TEST_PROMPT.md  CLOSINGBELL_STATUS.md  FIXES_v10.1.1.md  IMPROVEMENT_PLAN.md  README.md  STRATEGY_GUIDE.md  TODO_FIXES.md  UPGRADE_v6.0.md  apply_patch_v10.1.1.py  backfill_spikes.py  backtest_v65.py  check_db.py  clean_3days.py  clean_all.py  closingbell_strategy_notes.md  debug_price.py  delete_20th.py  fix_all_data.py  fix_names.py  fix_news_count.py  fix_top5_volume.py  fix_v6_schema.py  main.py  pyproject.toml  requirements.txt  reset_company_info.py  run_dashboard.bat  run_debug.bat  run_full_test.py  run_scheduler.bat  run_screener.bat  run_screnner.bat  setup_venv.bat  stock_mapping.py  test_broker_signal.py  (+7 more)
.cache/: kiwoom_token.json
_backup_v10.1.0/: src_services_top5_pipeline.py
dashboard/: app.py
dashboard/.streamlit/: config.toml  pages.toml
dashboard/components/: charts.py  date_utils.py  sidebar.py
dashboard/pages/: 01_📊_Overview.py  02_#L01f50d_Screening.py  02_🔍_Screening.py  03_📈_Analysis.py  04_#L01f4dd_Journal.py  04_📝_Journal.py  1_#Uc885#Uac00#Ub9e4#Ub9e4_TOP5.py  1_top5_tracker.py  1_종가매매_TOP5.py  2_#Uc720#Ubaa9#Ubbfc_#Uacf5#Ubd80#Ubc95.py  2_nomad_study.py  2_유목민_공부법.py  3_stock_search.py  4_broker_flow.py  5_stock_analysis.py  6_holdings_watch.py  7_pullback.py  8_trade_journal.py
dashboard/utils/: __init__.py  calculations.py  data_loader.py
data/: broker_anomaly_20260205_1045.csv  screener.db  screener.db-shm  screener.db.backup_20260119_225522
docs/: 01_PRD_v1.0.md  02_User_Stories.md  03_User_Flows.md  04_Database_Design.md  05_API_Spec.md  06_Architecture.md  07_Risk_Analysis.md  08_Test_Plan.md  SCORE_SYSTEM_v6.2.md  SCORE_SYSTEM_v6.3.1.md  closingbell_strategy_notes.md  roadmap_status.md  runbook.md  v9_checklist.md
migrations/: v6_1_add_company_fields.sql  v6_3_1_add_trading_fields.sql  v6_3_2_add_top5_ai.sql  v6_3_add_sector_fields.sql  v6_schema.sql
reports/: 20260206_090710.md
scripts/: analyze_occurrence.py  backup_db.py  check_stock_score.py  collect_kis_ohlcv.py  debug_market_data.py  debug_trading_value.py  debug_universe_tv200.py  manual_screening.py  nomad_backtest.py  run_migration_v6.py  run_now.py  show_today_top3.py  smoke_test_top5.py  test_discord_webhook.py  update_weights.py
src/: __init__.py
src/adapters/: __init__.py  discord_notifier.py  gemini_client.py  kakao_notifier.py  kis_client.py  kiwoom_rest_client.py  naver_client.py
src/analyzers/: __init__.py  broker_tracker.py  entry_exit_calculator.py  news_timeline.py  (+3 more)
tests/: conftest.py  test_v10_1_e2e.py
tools/: clean_csv.py  db_cleanup.py  kakao_token_helper.py  run_backtest.py  test_mcap.py
(+81 files in other folders)
